# Encryption-Algorithms

./: CMakeLists.txt  README.md  main.c
C/: CMakeLists.txt  main.c
C/des/: des.c  des.h  des_feistel.c  des_feistel.h  des_util.c  des_util.h  fiestel.c  fiestel.h  keygen.c  keygen.h  util.c  util.h
C/sdes/: config.h  feistel.c  feistel.h  sdes.c  sdes.h  sdes_feistel.c  sdes_feistel.h  sdes_util.c  sdes_util.h  subkey.h
C/substitution/: autokey.c  autokey.h  caesar.c  caesar.h  substitution.h  vignere.c  vignere.h
C/transposition/: railfence.c  railfence.h  rowtransposition.c  rowtransposition.h
Kotlin/src/: Main.kt
Kotlin/src/des/: Config.kt  DES.kt  Util.kt
Kotlin/src/sdes/: Config.kt  SubKey.kt  Util.kt
Kotlin/src/substitution/: Caesar.kt  Vignere.kt
sdes/: config.h  feistel.c  feistel.h  sdes.c  sdes.h  sdes_util.c  sdes_util.h  subkey.c  subkey.h
src/: Main.kt
src/des/: Config.kt  DES.kt  Fiestel.kt  RoundKey.kt  Util.kt
src/monoalphabetic/: Caesar.kt
src/sdes/: Fiestel.kt  Modes.kt  SDES.kt  SubKey.kt  Util.kt
src/substitution/: AutoKey.kt  Caesar.kt  MonoAlphabetic.kt  PolyAlphabetic.kt  Vignere.kt
src/transposition/: RailFence.kt  RowTransposition.kt
substitution/: autokey.c  autokey.h  caesar.c  caesar.h  monoalphabetic.c  monoalphabetic.h  vignere.c  vignere.h
transposition/: railfence.c  railfence.h  rowtransposition.c  rowtransposition.h  transposition.h
